# tts

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: api_reference.md
docs/superpowers/plans/: 2026-04-08-base-tts-and-system-voices.md  2026-04-08-root-dotenv-loading.md  2026-04-08-tts-worker-logging.md  2026-04-08-voxcpm-http-service.md
docs/superpowers/specs/: 2026-04-08-base-tts-and-system-voices-design.md  2026-04-08-root-dotenv-design.md  2026-04-08-voxcpm-http-service-design.md
src/tts_service/: __init__.py  config.py  main.py
src/tts_service/api/: auth.py  jobs.py  voices.py
src/tts_service/auth/: deps.py  security.py
src/tts_service/db/: models.py  session.py
src/tts_service/providers/: base.py  fake.py  nanovllm_voxcpm.py  official_voxcpm.py
src/tts_service/services/: jobs.py  voices.py  worker.py
src/tts_service/storage/: files.py
src/tts_service/worker/: cli.py
src/voxcpm_http_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
storage/: app.db
tests/: test_auth_api.py  test_config.py  test_health.py  test_job_lifecycle_api.py  test_jobs_api.py  test_official_voxcpm_provider.py  test_one_off_clone_job_api.py  test_provider_selection.py  test_system_voice_manifest.py  test_system_voices_api.py  test_voice_profiles_api.py  test_worker_cli.py  test_worker_flow.py
